03. Làm trang Thêm mới danh mục bài viết

--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -6,6 +6,8 @@ html(
   lang="en"
   )
   head
+    script.
+      const pathAdmin = "#{pathAdmin}"
     meta(charset="utf-8")
     title #{pageTitle}
     meta(
@@ -68,9 +70,10 @@ html(
     // end page-wrapper
     // Javascript
     // vendor js
+    script(src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js")
     script(src="/admin/assets/libs/bootstrap/js/bootstrap.bundle.min.js")
     script(src="/admin/assets/libs/simplebar/simplebar.min.js")
-    script(src="/admin/assets/libs/apexcharts/apexcharts.min.js")
-    script(src="/admin/assets/js/pages/ecommerce-index.init.js")
+    block script
     script(src="/admin/assets/js/app.js")
+    script(src="/admin/assets/js/main.js")
   // end body
