01. Làm trang Thêm mới danh mục bài viết (Tiếp) - Lưu dữ liệu, in thông báo

--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -31,6 +31,7 @@ html(
       href="/admin/assets/images/favicon.ico" 
       rel="shortcut icon"
       )
+    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css")
     // App css
     link(
       type="text/css" 
@@ -71,6 +72,7 @@ html(
     // Javascript
     // vendor js
     script(src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js")
+    script(src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js")
     script(src="/admin/assets/libs/bootstrap/js/bootstrap.bundle.min.js")
     script(src="/admin/assets/libs/simplebar/simplebar.min.js")
     block script
