--- a/views/admin/pages/article-create-category.pug
+++ b/views/admin/pages/article-create-category.pug
@@ -17,8 +17,8 @@ block main
             .mb-3
               label.form-label(for="parent") Danh mục cha
               select.form-select(id="parent" name="parent")
-                option(value="") Danh mục 1
-                option(value="") Danh mục 2
+                each item in categoryList
+                  option(value=item.id) #{item.name}
           .col-md-12.col-lg-12
             .mb-3
               label.form-label(for="description") Mô tả
