01. Làm trang Thêm mới danh mục bài viết (Tiếp) - Hiển thị danh mục dạng cây

--- a/views/admin/pages/article-create-category.pug
+++ b/views/admin/pages/article-create-category.pug
@@ -1,4 +1,5 @@
 extends ../layouts/default.pug
+include ../mixins/options.pug
 
 block main
   .card
@@ -17,8 +18,8 @@ block main
             .mb-3
               label.form-label(for="parent") Danh mục cha
               select.form-select(id="parent" name="parent")
-                each item in categoryList
-                  option(value=item.id) #{item.name}
+                option(value="") --Chọn danh mục--
+                +options(categoryList, 0)
           .col-md-12.col-lg-12
             .mb-3
               label.form-label(for="description") Mô tả
