01. Làm trang Thêm mới danh mục bài viết (Tiếp) - Thêm slug

--- a/views/admin/pages/article-create-category.pug
+++ b/views/admin/pages/article-create-category.pug
@@ -16,6 +16,16 @@ block main
               input.form-control(id="name" type="text" name="name")
           .col-md-6.col-lg-6
             .mb-3
+              label.form-label(for="slug") Đường dẫn *
+              .input-group
+                span.btn.btn-outline-info(
+                  btn-generate-slug="CategoryBlog"
+                  from="name"
+                  to="slug"
+                  ) Tự động
+                input.form-control(id="slug" type="text" name="slug")
+          .col-md-6.col-lg-6
+            .mb-3
               label.form-label(for="parent") Danh mục cha
               select.form-select(id="parent" name="parent")
                 option(value="") --Chọn danh mục--
