--- a/views/admin/pages/article-create-category.pug
+++ b/views/admin/pages/article-create-category.pug
@@ -30,6 +30,12 @@ block main
               select.form-select(id="parent" name="parent")
                 option(value="") --Chọn danh mục--
                 +options(categoryList, 0)
+          .col-md-6.col-lg-6
+            .mb-3
+              label.form-label(for="status") Trạng thái
+              select.form-select(id="status" name="status")
+                option(value="active") Hoạt động
+                option(value="inactive") Tạm dừng
           .col-md-12.col-lg-12
             .mb-3
               label.form-label(for="description") Mô tả
