01. Làm trang Thêm mới danh mục bài viết (Tiếp) - Thêm TinyMCE

--- a/views/admin/pages/article-create-category.pug
+++ b/views/admin/pages/article-create-category.pug
@@ -39,6 +39,6 @@ block main
           .col-md-12.col-lg-12
             .mb-3
               label.form-label(for="description") Mô tả
-              textarea.form-control(id="description" name="description")
+              textarea.form-control(id="description" name="description" textarea-mce)
         button.btn.btn-primary(type="submit") Tạo mới
         a.btn.btn-danger.ms-1(href=`/${pathAdmin}/article/category`) Hủy
