--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -78,6 +78,7 @@ html(
     // vendor js
     script(src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js")
     script(src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js")
+    script(src="https://cdn.tiny.cloud/1/93s3c2zvlmcrzq2f25uhooiivql6uyamcgrjbgd3dy4nstvc/tinymce/8/tinymce.min.js" referrerpolicy="origin" crossorigin="anonymous")
     script(src="/admin/assets/libs/bootstrap/js/bootstrap.bundle.min.js")
     script(src="/admin/assets/libs/simplebar/simplebar.min.js")
     block script
