02. Làm trang Chỉnh sửa danh mục bài viết

--- a/views/admin/pages/article-category.pug
+++ b/views/admin/pages/article-category.pug
@@ -42,7 +42,7 @@ block main
                         span.badge.bg-danger Tạm dừng
                     td #{item.views}
                     td.text-end
-                      a(href="#")
+                      a(href=`/${pathAdmin}/article/category/edit/${item.id}`)
                         i.las.la-pen.text-secondary.font-16
                       a(href="#")
                         i.las.la-trash-alt.text-secondary.font-16
