01. Tính năng Phân trang (Trang Danh sách danh mục)

--- a/views/admin/pages/article-category.pug
+++ b/views/admin/pages/article-category.pug
@@ -46,7 +46,7 @@ block main
               tbody
                 each item, index in recordList
                   tr
-                    td #{index+1}
+                    td #{pagination.skip + index+1}
                     td #{item.name}
                     td #{item.parentName}
                     td
@@ -65,5 +65,10 @@ block main
                         data-api=`/${pathAdmin}/article/category/delete/${item.id}`
                       )
                         i.las.la-trash-alt.text-secondary.font-16
+          .row.mt-3
+            .col-lg-2.col-md-3.col-6
+              select.form-select(pagination)
+                - for(let i = 1; i <= pagination.totalPage; i++)
+                    option(value=i) Trang #{i}
   // end /table
   // end col
