--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -32,6 +32,7 @@ html(
       rel="shortcut icon"
       )
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css")
+    link(href="https://releases.transloadit.com/uppy/v5.1.11/uppy.min.css" rel="stylesheet")
     // App css
     link(
       type="text/css" 
@@ -85,4 +86,5 @@ html(
     block script
     script(src="/admin/assets/js/app.js")
     script(src="/admin/assets/js/main.js")
+    script(type="module" src="/admin/assets/js/uppy.js") 
   // end body
