--- a/views/admin/partials/startbar.pug
+++ b/views/admin/partials/startbar.pug
@@ -54,6 +54,13 @@
               // end nav
             // end startbarApplications
           // end nav-item
+          li.nav-item
+            a.nav-link(
+              href=`/${pathAdmin}/file-manager`
+              )
+              i.iconoir-folder-settings.menu-icon
+              span Quản lý file
+          // end nav-item
     // end startbar-collapse
   // end startbar-menu
 // end startbar
