--- a/views/admin/pages/file-manager.pug
+++ b/views/admin/pages/file-manager.pug
@@ -1,6 +1,49 @@
 extends ../layouts/default.pug
+include ../mixins/pagination.pug
 
 block main
+  .card
+    .card-header
+      .row.align-items-center
+        .col
+          h4.card-title Danh sách file
+        // end col
+      // end row
+    // end card-header
+    .card-body.pt-0
+      .table-responsive
+        table.table.table-striped.mb-0
+          thead.table-light
+            tr
+              th Tên
+              th Ngày tạo
+              th Kích thước
+              th.text-end Hành động
+          tbody
+            each item in listFile
+              tr
+                td
+                  img(
+                    src=`${domainCDN}${item.folder}/${item.filename}`
+                    class="rounded thumb-md me-1 d-inline"
+                  )
+                  span #{item.filename}
+                td #{item.createdAtFormat}
+                td #{item.sizeFormat}
+                td.text-end
+                  a(href="#")
+                    i.las.la-copy.text-secondary.fs-18.ms-1
+                  a(href="#")
+                    i.las.la-eye.text-secondary.fs-18.ms-1
+                  a(href="#")
+                    i.las.la-download.text-secondary.fs-18.ms-1
+                  a(href="#")
+                    i.las.la-pen.text-secondary.fs-18.ms-1
+                  a( href="#")
+                    i.las.la-trash-alt.text-secondary.fs-18.ms-1
+      +pagination()
+    // end card-body
+
   .card
     .card-header
       .row.align-items-center
