--- a/views/admin/pages/article-category.pug
+++ b/views/admin/pages/article-category.pug
@@ -1,4 +1,5 @@
 extends ../layouts/default.pug
+include ../mixins/pagination.pug
 
 block main
   .row
@@ -65,10 +66,6 @@ block main
                         data-api=`/${pathAdmin}/article/category/delete/${item.id}`
                       )
                         i.las.la-trash-alt.text-secondary.font-16
-          .row.mt-3
-            .col-lg-2.col-md-3.col-6
-              select.form-select(pagination)
-                - for(let i = 1; i <= pagination.totalPage; i++)
-                    option(value=i) Trang #{i}
+          +pagination()
   // end /table
   // end col
