--- a/views/admin/pages/file-manager.pug
+++ b/views/admin/pages/file-manager.pug
@@ -23,10 +23,20 @@ block main
             each item in listFile
               tr
                 td
-                  img(
-                    src=`${domainCDN}${item.folder}/${item.filename}`
-                    class="rounded thumb-md me-1 d-inline"
-                  )
+                  if (item.mimetype.includes("image"))
+                    img(
+                      src=`${domainCDN}${item.folder}/${item.filename}`
+                      class="rounded thumb-md me-1 d-inline"
+                    )
+                  else if(item.mimetype.includes("audio"))
+                    .d-inline-flex.justify-content-center.align-items-center.thumb-md.bg-blue-subtle.rounded.mx-auto.me-1
+                      i.fa-solid.fa-headphones
+                  else if(item.mimetype.includes("video"))
+                    .d-inline-flex.justify-content-center.align-items-center.thumb-md.bg-blue-subtle.rounded.mx-auto.me-1
+                      i.fa-solid.fa-video
+                  else if(item.mimetype.includes("application/pdf"))
+                    .d-inline-flex.justify-content-center.align-items-center.thumb-md.bg-blue-subtle.rounded.mx-auto.me-1
+                      i.fa-solid.fa-file-pdf
                   span #{item.filename}
                 td #{item.createdAtFormat}
                 td #{item.sizeFormat}
@@ -37,7 +47,14 @@ block main
                     data-content=`${item.folder}/${item.filename}`
                     )
                     i.las.la-copy.text-secondary.fs-18.ms-1
-                  a(href="#")
+                  a(
+                    href="javascript:;"
+                    data-bs-toggle="modal"
+                    data-bs-target="#modalPreviewFile"
+                    button-preview
+                    data-file=`${domainCDN}${item.folder}/${item.filename}`
+                    data-mimetype=`${item.mimetype}`
+                    )
                     i.las.la-eye.text-secondary.fs-18.ms-1
                   a(href="#")
                     i.las.la-download.text-secondary.fs-18.ms-1
@@ -59,3 +76,21 @@ block main
     .card-body.pt-0
       div(id="uppy-upload")
     // end card-body
+
+  //- Model Preview File
+  #modalPreviewFile.modal.fade(
+    aria-hidden="true" 
+    tabindex="-1"
+    )
+    .modal-dialog
+      .modal-content
+        .modal-header
+          h1#exampleModalLabel.modal-title.fs-5 Xem thử file
+          button.btn-close(
+            aria-label="Close" 
+            data-bs-dismiss="modal" 
+            type="button"
+            )
+        .modal-body
+          .inner-preview
+  //- End Model Preview File
