--- a/views/admin/pages/file-manager.pug
+++ b/views/admin/pages/file-manager.pug
@@ -56,7 +56,7 @@ block main
                     data-mimetype=`${item.mimetype}`
                     )
                     i.las.la-eye.text-secondary.fs-18.ms-1
-                  a(href="#")
+                  a(href=`${domainCDN}${item.folder}/${item.filename}?type=download`)
                     i.las.la-download.text-secondary.fs-18.ms-1
                   a(href="#")
                     i.las.la-pen.text-secondary.fs-18.ms-1
