--- a/views/admin/partials/startbar.pug
+++ b/views/admin/partials/startbar.pug
@@ -56,7 +56,7 @@
           // end nav-item
           li.nav-item
             a.nav-link(
-              href=`/${pathAdmin}/file-manager`
+              href=`/${pathAdmin}/file-manager/iframe`
               )
               i.iconoir-folder-settings.menu-icon
               span Quản lý file
