01. Thêm ảnh avatar cho danh mục

--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -8,6 +8,7 @@ html(
   head
     script.
       const pathAdmin = "#{pathAdmin}"
+      const domainCDN = "#{domainCDN}"
     meta(charset="utf-8")
     title #{pageTitle}
     meta(
@@ -75,6 +76,9 @@ html(
         // end footer
       // end page content
     // end page-wrapper
+
+    include ../partials/modal-file-manager.pug
+
     // Javascript
     // vendor js
     script(src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js")
