--- a/views/admin/pages/article-category.pug
+++ b/views/admin/pages/article-category.pug
@@ -39,6 +39,7 @@ block main
               thead.table-light
                 tr
                   th STT
+                  th Avatar
                   th Tên danh mục
                   th Danh mục cha
                   th Trạng thái
@@ -48,6 +49,12 @@ block main
                 each item, index in recordList
                   tr
                     td #{pagination.skip + index+1}
+                    td
+                      if(item.avatar)
+                        img(
+                          src=`${domainCDN}${item.avatar}`
+                          class="rounded thumb-md me-1 d-inline"
+                        )
                     td #{item.name}
                     td #{item.parentName}
                     td
