--- a/views/admin/pages/article-edit-category.pug
+++ b/views/admin/pages/article-edit-category.pug
@@ -1,5 +1,6 @@
 extends ../layouts/default.pug
 include ../mixins/options.pug
+include ../mixins/form-group.pug
 
 block main
   .card
@@ -40,6 +41,14 @@ block main
               select.form-select(id="status" name="status")
                 option(value="active" selected=(categroyDetail.status == "active" ? true : false)) Hoạt động
                 option(value="inactive" selected=(categroyDetail.status == "inactive" ? true : false)) Tạm dừng
+          .col-md-6.col-lg-6
+            .mb-3
+              +form-group-file(
+                "Ảnh đại diện", 
+                "avatar", 
+                "avatar",
+                categroyDetail.avatar
+                )
           .col-md-12.col-lg-12
             .mb-3
               label.form-label(for="description") Mô tả
