--- a/views/admin/pages/article-list.pug
+++ b/views/admin/pages/article-list.pug
@@ -12,38 +12,33 @@ block main
               h4.card-title #{pageTitle}
             // end col
             .col-auto
-              a.btn.btn-danger.me-1(
-                href=`/${pathAdmin}/article/category/trash`
-                )
-                i.fa-solid.fa-trash.me-1
-                | Thùng rác
               a.btn.btn-primary(
-                href=`/${pathAdmin}/article/category/create`
+                href=`/${pathAdmin}/article/create`
                 )
                 i.fa-solid.fa-plus.me-1
-                | Tạo danh mục
+                | Tạo bài viết
+                // end col
+            // end col
           // end row
         // end card-header
         .card-body.pt-0
           .row
             .col-lg-6
               +form-search()
-          //- Table
           .table-responsive
             table.table.table-striped.mb-0
               thead.table-light
                 tr
                   th STT
                   th Avatar
-                  th Tên danh mục
-                  th Danh mục cha
+                  th Tên bài viết
                   th Trạng thái
                   th Lượt xem
                   th.text-end Hành động
               tbody
                 each item, index in recordList
                   tr
-                    td #{pagination.skip + index+1}
+                    td #{pagination.skip + index + 1}
                     td
                       if(item.avatar)
                         img(
@@ -51,23 +46,24 @@ block main
                           class="rounded thumb-md me-1 d-inline"
                         )
                     td #{item.name}
-                    td #{item.parentName}
                     td
-                      if (item.status == "active")
-                        span.badge.bg-success Hoạt động
-                      else if(item.status == "inactive")
-                        span.badge.bg-danger Tạm dừng
-                    td #{item.views}
+                      if (item.status == "draft")
+                        span(class="badge bg-dark") Bản nháp
+                      else if (item.status == "published")
+                        span(class="badge bg-success") Đã xuất bản
+                      else if (item.status == "archived")
+                        span(class="badge bg-danger") Đã lưu trữ
+                    td #{item.view}
                     td.text-end
-                      a(href=`/${pathAdmin}/article/category/edit/${item.id}`)
+                      a(href=`/${pathAdmin}/article/edit/${item.id}`)
                         i.las.la-pen.text-secondary.font-16
                       a(
                         href="javascript:;"
                         button-api
                         data-method="PATCH"
-                        data-api=`/${pathAdmin}/article/category/delete/${item.id}`
+                        data-api=`/${pathAdmin}/article/delete/${item.id}`
                       )
                         i.las.la-trash-alt.text-secondary.font-16
           +pagination()
-  // end /table
-  // end col
+    // end col
+
