--- a/views/admin/partials/startbar.pug
+++ b/views/admin/partials/startbar.pug
@@ -56,6 +56,24 @@
           // end nav-item
           li.nav-item
             a.nav-link(
+              aria-controls="sidebarRole" 
+              aria-expanded="false" 
+              role="button" 
+              data-bs-toggle="collapse" 
+              href="#sidebarRole"
+              )
+              i.iconoir-user-badge-check.menu-icon
+              span Nhóm quyền
+            #sidebarRole.collapse
+              ul.nav.flex-column
+                li.nav-item
+                  a.nav-link(href=`/${pathAdmin}/role/create`) Tạo nhóm quyền
+                // end nav-item
+                li.nav-item
+                  a.nav-link(href=`/${pathAdmin}/role/list`) Danh sách nhóm quyền
+                // end nav-item
+          li.nav-item
+            a.nav-link(
               href=`/${pathAdmin}/file-manager/iframe`
               )
               i.iconoir-folder-settings.menu-icon
