--- a/views/admin/layouts/blank.pug
+++ b/views/admin/layouts/blank.pug
@@ -63,6 +63,7 @@ html(
     // vendor js
     script(src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js")
     script(src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js")
+    script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11")
     script(src="https://cdn.tiny.cloud/1/6qrde4l6elwnvo9777fjuy25c3mpgxkhyuwi66w7ewn1mwb1/tinymce/8/tinymce.min.js" referrerpolicy="origin" crossorigin="anonymous") 
     script(src="/admin/assets/libs/bootstrap/js/bootstrap.bundle.min.js")
     script(src="/admin/assets/libs/simplebar/simplebar.min.js")
