--- a/views/admin/pages/article-trash-category.pug
+++ b/views/admin/pages/article-trash-category.pug
@@ -55,13 +55,13 @@ block main
                         data-method="PATCH"
                         data-api=`/${pathAdmin}/article/category/undo/${item.id}`
                       )
-                        <i class="fa-solid fa-rotate-left text-primary"></i>
+                        i.las.la-undo-alt.text-success.fs-18.ms-1
                       a(
                         href="javascript:;"
                         button-api
                         data-method="DELETE"
                         data-api=`/${pathAdmin}/article/category/destroy/${item.id}`
                       )
-                        i.las.la-trash-alt.text-danger.font-16
+                        i.las.la-trash-alt.text-danger.fs-18.ms-1
   // end /table
   // end col
