--- a/views/admin/pages/account-admin-list.pug
+++ b/views/admin/pages/account-admin-list.pug
@@ -63,14 +63,16 @@ block main
                       else if (item.status == "inactive")
                         span(class="badge bg-danger") Tạm dừng
                     td.text-end
+                      a(href=`/${pathAdmin}/account-admin/change-password/${item.id}`)
+                        i.las.la-key.text-secondary.fs-18.ms-1
                       a(href=`/${pathAdmin}/account-admin/edit/${item.id}`)
-                        i.las.la-pen.text-secondary.font-16
+                        i.las.la-pen-alt.text-secondary.fs-18.ms-1
                       a(
                         href="javascript:;"
                         button-api
                         data-method="PATCH"
                         data-api=`/${pathAdmin}/account-admin/delete/${item.id}`
                       )
-                        i.las.la-trash-alt.text-secondary.font-16
+                        i.las.la-trash-alt.text-secondary.fs-18.ms-1
           +pagination()
     // end col
