--- a/views/admin/pages/article-list.pug
+++ b/views/admin/pages/article-list.pug
@@ -61,14 +61,14 @@ block main
                     td #{item.view}
                     td.text-end
                       a(href=`/${pathAdmin}/article/edit/${item.id}`)
-                        i.las.la-pen.text-secondary.font-16
+                        i.las.la-pen-alt.text-secondary.fs-18.ms-1
                       a(
                         href="javascript:;"
                         button-api
                         data-method="PATCH"
                         data-api=`/${pathAdmin}/article/delete/${item.id}`
                       )
-                        i.las.la-trash-alt.text-secondary.font-16
+                        i.las.la-trash-alt.text-secondary.fs-18.ms-1
           +pagination()
     // end col
 
