--- a/views/admin/pages/role-list.pug
+++ b/views/admin/pages/role-list.pug
@@ -52,13 +52,13 @@ block main
                         span(class="badge bg-danger") Tạm dừng
                     td.text-end
                       a(href=`/${pathAdmin}/role/edit/${item.id}`)
-                        i.las.la-pen.text-secondary.font-16
+                        i.las.la-pen-alt.text-secondary.fs-18.ms-1
                       a(
                         href="javascript:;"
                         button-api
                         data-method="PATCH"
                         data-api=`/${pathAdmin}/role/delete/${item.id}`
                       )
-                        i.las.la-trash-alt.text-secondary.font-16
+                        i.las.la-trash-alt.text-secondary.fs-18.ms-1
           +pagination()
     // end col
