--- a/views/admin/pages/role-trash.pug
+++ b/views/admin/pages/role-trash.pug
@@ -48,13 +48,13 @@ block main
                         data-method="PATCH"
                         data-api=`/${pathAdmin}/role/undo/${item.id}`
                       )
-                        <i class="fa-solid fa-rotate-left text-primary"></i>
+                        i.las.la-undo-alt.text-success.fs-18.ms-1
                       a(
                         href="javascript:;"
                         button-api
                         data-method="DELETE"
                         data-api=`/${pathAdmin}/role/destroy/${item.id}`
                       )
-                        i.las.la-trash-alt.text-danger.font-16
+                        i.las.la-trash-alt.text-danger.fs-18.ms-1
     // end col
 
