03. Tính năng Đăng xuất

--- a/views/admin/partials/topbar.pug
+++ b/views/admin/partials/topbar.pug
@@ -305,7 +305,7 @@
             //-   i.las.la-question-circle.fs-18.me-1.align-text-bottom
             //-   | Help Center
             //- .dropdown-divider.mb-0
-            a.dropdown-item.text-danger(href="#")
+            a.dropdown-item.text-danger(href=`/${pathAdmin}/account/logout`)
               i.las.la-power-off.fs-18.me-1.align-text-bottom
               | Đăng xuất
       // end topbar-nav
