--- a/views/admin/pages/article-trash.pug
+++ b/views/admin/pages/article-trash.pug
@@ -1,69 +1,70 @@
 extends ../layouts/default.pug
 
 block main
-  .row
-    .col-12
-      .card
-        .card-header
-          .row.align-items-center
-            .col
-              h4.card-title #{pageTitle}
-            // end col
-            .col-auto
-              a.btn.btn-secondary(
-                href=`/${pathAdmin}/article/list`
-                )
-                <i class="fa-solid fa-arrow-left me-1"></i>
-                | Quay lại danh sách
-                // end col
-            // end col
-          // end row
-        // end card-header
-        .card-body.pt-0
-          //- Table
-          .table-responsive
-            table.table.table-striped.mb-0
-              thead.table-light
-                tr
-                  th STT
-                  th Avatar
-                  th Tên bài viết
-                  th Trạng thái
-                  th Lượt xem
-                  th.text-end Hành động
-              tbody
-                each item, index in recordList
+  if (permissions.includes("article-trash"))
+    .row
+      .col-12
+        .card
+          .card-header
+            .row.align-items-center
+              .col
+                h4.card-title #{pageTitle}
+              // end col
+              .col-auto
+                a.btn.btn-secondary(
+                  href=`/${pathAdmin}/article/list`
+                  )
+                  <i class="fa-solid fa-arrow-left me-1"></i>
+                  | Quay lại danh sách
+                  // end col
+              // end col
+            // end row
+          // end card-header
+          .card-body.pt-0
+            //- Table
+            .table-responsive
+              table.table.table-striped.mb-0
+                thead.table-light
                   tr
-                    td #{index + 1}
-                    td
-                      if(item.avatar)
-                        img(
-                          src=`${domainCDN}${item.avatar}`
-                          class="rounded thumb-md me-1 d-inline"
+                    th STT
+                    th Avatar
+                    th Tên bài viết
+                    th Trạng thái
+                    th Lượt xem
+                    th.text-end Hành động
+                tbody
+                  each item, index in recordList
+                    tr
+                      td #{index + 1}
+                      td
+                        if(item.avatar)
+                          img(
+                            src=`${domainCDN}${item.avatar}`
+                            class="rounded thumb-md me-1 d-inline"
+                          )
+                      td #{item.name}
+                      td
+                        if (item.status == "draft")
+                          span(class="badge bg-dark") Bản nháp
+                        else if (item.status == "published")
+                          span(class="badge bg-success") Đã xuất bản
+                        else if (item.status == "archived")
+                          span(class="badge bg-danger") Đã lưu trữ
+                      td #{item.view}
+                      td.text-end
+                        a(
+                          href="javascript:;"
+                          button-api
+                          data-method="PATCH"
+                          data-api=`/${pathAdmin}/article/undo/${item.id}`
                         )
-                    td #{item.name}
-                    td
-                      if (item.status == "draft")
-                        span(class="badge bg-dark") Bản nháp
-                      else if (item.status == "published")
-                        span(class="badge bg-success") Đã xuất bản
-                      else if (item.status == "archived")
-                        span(class="badge bg-danger") Đã lưu trữ
-                    td #{item.view}
-                    td.text-end
-                      a(
-                        href="javascript:;"
-                        button-api
-                        data-method="PATCH"
-                        data-api=`/${pathAdmin}/article/undo/${item.id}`
-                      )
-                        i.las.la-undo-alt.text-success.fs-18.ms-1
-                      a(
-                        href="javascript:;"
-                        button-api
-                        data-method="DELETE"
-                        data-api=`/${pathAdmin}/article/destroy/${item.id}`
-                      )
-                        i.las.la-trash-alt.text-danger.fs-18.ms-1
-    // end col
+                          i.las.la-undo-alt.text-success.fs-18.ms-1
+                        a(
+                          href="javascript:;"
+                          button-api
+                          data-method="DELETE"
+                          data-api=`/${pathAdmin}/article/destroy/${item.id}`
+                        )
+                          i.las.la-trash-alt.text-danger.fs-18.ms-1
+      // end col
 
