--- a/views/admin/pages/article-category.pug
+++ b/views/admin/pages/article-category.pug
@@ -12,16 +12,18 @@ block main
               h4.card-title #{pageTitle}
             // end col
             .col-auto
-              a.btn.btn-danger.me-1(
-                href=`/${pathAdmin}/article/category/trash`
-                )
-                i.fa-solid.fa-trash.me-1
-                | Thùng rác
-              a.btn.btn-primary(
-                href=`/${pathAdmin}/article/category/create`
-                )
-                i.fa-solid.fa-plus.me-1
-                | Tạo danh mục
+              if (permissions.includes("article-category-trash"))
+                a.btn.btn-danger.me-1(
+                  href=`/${pathAdmin}/article/category/trash`
+                  )
+                  i.fa-solid.fa-trash.me-1
+                  | Thùng rác
+              if (permissions.includes("article-category-create"))
+                a.btn.btn-primary(
+                  href=`/${pathAdmin}/article/category/create`
+                  )
+                  i.fa-solid.fa-plus.me-1
+                  | Tạo danh mục
           // end row
         // end card-header
         .card-body.pt-0
@@ -59,15 +61,17 @@ block main
                         span.badge.bg-danger Tạm dừng
                     td #{item.views}
                     td.text-end
-                      a(href=`/${pathAdmin}/article/category/edit/${item.id}`)
-                        i.las.la-pen-alt.text-secondary.fs-18.ms-1
-                      a(
-                        href="javascript:;"
-                        button-api
-                        data-method="PATCH"
-                        data-api=`/${pathAdmin}/article/category/delete/${item.id}`
-                      )
-                        i.las.la-trash-alt.text-secondary.fs-18.ms-1
+                      if (permissions.includes("article-category-edit"))
+                        a(href=`/${pathAdmin}/article/category/edit/${item.id}`)
+                          i.las.la-pen-alt.text-secondary.fs-18.ms-1
+                      if (permissions.includes("article-category-delete"))
+                        a(
+                          href="javascript:;"
+                          button-api
+                          data-method="PATCH"
+                          data-api=`/${pathAdmin}/article/category/delete/${item.id}`
+                        )
+                          i.las.la-trash-alt.text-secondary.fs-18.ms-1
           +pagination()
   // end /table
   // end col
