--- a/views/admin/pages/article-list.pug
+++ b/views/admin/pages/article-list.pug
@@ -12,16 +12,18 @@ block main
               h4.card-title #{pageTitle}
             // end col
             .col-auto
-              a.btn.btn-danger.me-1(
-                href=`/${pathAdmin}/article/trash`
-                )
-                i.fa-solid.fa-trash.me-1
-                | Thùng rác
-              a.btn.btn-primary(
-                href=`/${pathAdmin}/article/create`
-                )
-                i.fa-solid.fa-plus.me-1
-                | Tạo bài viết
+              if (permissions.includes("article-trash"))
+                a.btn.btn-danger.me-1(
+                  href=`/${pathAdmin}/article/trash`
+                  )
+                  i.fa-solid.fa-trash.me-1
+                  | Thùng rác
+              if (permissions.includes("article-create"))
+                a.btn.btn-primary(
+                  href=`/${pathAdmin}/article/create`
+                  )
+                  i.fa-solid.fa-plus.me-1
+                  | Tạo bài viết
                 // end col
             // end col
           // end row
@@ -60,15 +62,17 @@ block main
                         span(class="badge bg-danger") Đã lưu trữ
                     td #{item.view}
                     td.text-end
-                      a(href=`/${pathAdmin}/article/edit/${item.id}`)
-                        i.las.la-pen-alt.text-secondary.fs-18.ms-1
-                      a(
-                        href="javascript:;"
-                        button-api
-                        data-method="PATCH"
-                        data-api=`/${pathAdmin}/article/delete/${item.id}`
-                      )
-                        i.las.la-trash-alt.text-secondary.fs-18.ms-1
+                      if (permissions.includes("article-edit"))
+                        a(href=`/${pathAdmin}/article/edit/${item.id}`)
+                          i.las.la-pen-alt.text-secondary.fs-18.ms-1
+                      if (permissions.includes("article-delete"))
+                        a(
+                          href="javascript:;"
+                          button-api
+                          data-method="PATCH"
+                          data-api=`/${pathAdmin}/article/delete/${item.id}`
+                        )
+                          i.las.la-trash-alt.text-secondary.fs-18.ms-1
           +pagination()
     // end col
 
