--- a/views/admin/pages/article-trash-category.pug
+++ b/views/admin/pages/article-trash-category.pug
@@ -1,67 +1,68 @@
 extends ../layouts/default.pug
 
 block main
-  .row
-    .col-12
-      .card
-        .card-header
-          .row.align-items-center
-            .col
-              h4.card-title #{pageTitle}
-            // end col
-            .col-auto
-              a.btn.btn-secondary(
-                href=`/${pathAdmin}/article/category`
-                )
-                <i class="fa-solid fa-arrow-left me-1"></i>
-                | Quay lại danh sách
-          // end row
-        // end card-header
-        .card-body.pt-0
-          //- Table
-          .table-responsive
-            table.table.table-striped.mb-0
-              thead.table-light
-                tr
-                  th STT
-                  th Avatar
-                  th Tên danh mục
-                  th Danh mục cha
-                  th Trạng thái
-                  th Lượt xem
-                  th.text-end Hành động
-              tbody
-                each item, index in recordList
+  if (permissions.includes("article-trash-category"))
+    .row
+      .col-12
+        .card
+          .card-header
+            .row.align-items-center
+              .col
+                h4.card-title #{pageTitle}
+              // end col
+              .col-auto
+                a.btn.btn-secondary(
+                  href=`/${pathAdmin}/article/category`
+                  )
+                  <i class="fa-solid fa-arrow-left me-1"></i>
+                  | Quay lại danh sách
+            // end row
+          // end card-header
+          .card-body.pt-0
+            //- Table
+            .table-responsive
+              table.table.table-striped.mb-0
+                thead.table-light
                   tr
-                    td #{index+1}
-                    td
-                      if(item.avatar)
-                        img(
-                          src=`${domainCDN}${item.avatar}`
-                          class="rounded thumb-md me-1 d-inline"
+                    th STT
+                    th Avatar
+                    th Tên danh mục
+                    th Danh mục cha
+                    th Trạng thái
+                    th Lượt xem
+                    th.text-end Hành động
+                tbody
+                  each item, index in recordList
+                    tr
+                      td #{index+1}
+                      td
+                        if(item.avatar)
+                          img(
+                            src=`${domainCDN}${item.avatar}`
+                            class="rounded thumb-md me-1 d-inline"
+                          )
+                      td #{item.name}
+                      td #{item.parentName}
+                      td
+                        if (item.status == "active")
+                          span.badge.bg-success Hoạt động
+                        else if(item.status == "inactive")
+                          span.badge.bg-danger Tạm dừng
+                      td #{item.views}
+                      td.text-end
+                        a(
+                          href="javascript:;"
+                          button-api
+                          data-method="PATCH"
+                          data-api=`/${pathAdmin}/article/category/undo/${item.id}`
                         )
-                    td #{item.name}
-                    td #{item.parentName}
-                    td
-                      if (item.status == "active")
-                        span.badge.bg-success Hoạt động
-                      else if(item.status == "inactive")
-                        span.badge.bg-danger Tạm dừng
-                    td #{item.views}
-                    td.text-end
-                      a(
-                        href="javascript:;"
-                        button-api
-                        data-method="PATCH"
-                        data-api=`/${pathAdmin}/article/category/undo/${item.id}`
-                      )
-                        i.las.la-undo-alt.text-success.fs-18.ms-1
-                      a(
-                        href="javascript:;"
-                        button-api
-                        data-method="DELETE"
-                        data-api=`/${pathAdmin}/article/category/destroy/${item.id}`
-                      )
-                        i.las.la-trash-alt.text-danger.fs-18.ms-1
-  // end /table
-  // end col
+                          i.las.la-undo-alt.text-success.fs-18.ms-1
+                        a(
+                          href="javascript:;"
+                          button-api
+                          data-method="DELETE"
+                          data-api=`/${pathAdmin}/article/category/destroy/${item.id}`
+                        )
+                          i.las.la-trash-alt.text-danger.fs-18.ms-1
+    // end /table
+    // end col
