--- a/views/admin/pages/role-list.pug
+++ b/views/admin/pages/role-list.pug
@@ -12,16 +12,18 @@ block main
               h4.card-title #{pageTitle}
             // end col
             .col-auto
-              a.btn.btn-danger.me-1(
-                href=`/${pathAdmin}/role/trash`
-                )
-                i.fa-solid.fa-trash.me-1
-                | Thùng rác
-              a.btn.btn-primary(
-                href=`/${pathAdmin}/role/create`
-                )
-                i.fa-solid.fa-plus.me-1
-                | Tạo nhóm quyền
+              if (permissions.includes("role-trash"))
+                a.btn.btn-danger.me-1(
+                  href=`/${pathAdmin}/role/trash`
+                  )
+                  i.fa-solid.fa-trash.me-1
+                  | Thùng rác
+              if (permissions.includes("role-create"))
+                a.btn.btn-primary(
+                  href=`/${pathAdmin}/role/create`
+                  )
+                  i.fa-solid.fa-plus.me-1
+                  | Tạo nhóm quyền
                 // end col
             // end col
           // end row
@@ -51,14 +53,16 @@ block main
                       else if (item.status == "inactive")
                         span(class="badge bg-danger") Tạm dừng
                     td.text-end
-                      a(href=`/${pathAdmin}/role/edit/${item.id}`)
-                        i.las.la-pen-alt.text-secondary.fs-18.ms-1
-                      a(
-                        href="javascript:;"
-                        button-api
-                        data-method="PATCH"
-                        data-api=`/${pathAdmin}/role/delete/${item.id}`
-                      )
-                        i.las.la-trash-alt.text-secondary.fs-18.ms-1
+                      if (permissions.includes("role-edit"))
+                        a(href=`/${pathAdmin}/role/edit/${item.id}`)
+                          i.las.la-pen-alt.text-secondary.fs-18.ms-1
+                      if (permissions.includes("role-delete"))
+                        a(
+                          href="javascript:;"
+                          button-api
+                          data-method="PATCH"
+                          data-api=`/${pathAdmin}/role/delete/${item.id}`
+                        )
+                          i.las.la-trash-alt.text-secondary.fs-18.ms-1
           +pagination()
     // end col
