--- a/views/admin/pages/role-trash.pug
+++ b/views/admin/pages/role-trash.pug
@@ -1,60 +1,61 @@
 extends ../layouts/default.pug
 
 block main
-  .row
-    .col-12
-      .card
-        .card-header
-          .row.align-items-center
-            .col
-              h4.card-title #{pageTitle}
-            // end col
-            .col-auto
-              a.btn.btn-secondary(
-                href=`/${pathAdmin}/role/list`
-                )
-                <i class="fa-solid fa-arrow-left me-1"></i>
-                | Quay lại danh sách
-                // end col
-            // end col
-          // end row
-        // end card-header
-        .card-body.pt-0
-          //- Table
-          .table-responsive
-            table.table.table-striped.mb-0
-              thead.table-light
-                tr
-                  th STT
-                  th Tên nhóm quyền
-                  th Mô tả
-                  th Trạng thái
-                  th.text-end Hành động
-              tbody
-                each item, index in recordList
+  if (permissions.includes("role-trash"))
+    .row
+      .col-12
+        .card
+          .card-header
+            .row.align-items-center
+              .col
+                h4.card-title #{pageTitle}
+              // end col
+              .col-auto
+                a.btn.btn-secondary(
+                  href=`/${pathAdmin}/role/list`
+                  )
+                  <i class="fa-solid fa-arrow-left me-1"></i>
+                  | Quay lại danh sách
+                  // end col
+              // end col
+            // end row
+          // end card-header
+          .card-body.pt-0
+            //- Table
+            .table-responsive
+              table.table.table-striped.mb-0
+                thead.table-light
                   tr
-                    td #{index + 1}
-                    td #{item.name}
-                    td #{item.description}
-                    td
-                      if (item.status == "active")
-                        span(class="badge bg-success") Hoạt động
-                      else if (item.status == "inactive")
-                        span(class="badge bg-danger") Tạm dừng
-                    td.text-end
-                      a(
-                        href="javascript:;"
-                        button-api
-                        data-method="PATCH"
-                        data-api=`/${pathAdmin}/role/undo/${item.id}`
-                      )
-                        i.las.la-undo-alt.text-success.fs-18.ms-1
-                      a(
-                        href="javascript:;"
-                        button-api
-                        data-method="DELETE"
-                        data-api=`/${pathAdmin}/role/destroy/${item.id}`
-                      )
-                        i.las.la-trash-alt.text-danger.fs-18.ms-1
-    // end col
+                    th STT
+                    th Tên nhóm quyền
+                    th Mô tả
+                    th Trạng thái
+                    th.text-end Hành động
+                tbody
+                  each item, index in recordList
+                    tr
+                      td #{index + 1}
+                      td #{item.name}
+                      td #{item.description}
+                      td
+                        if (item.status == "active")
+                          span(class="badge bg-success") Hoạt động
+                        else if (item.status == "inactive")
+                          span(class="badge bg-danger") Tạm dừng
+                      td.text-end
+                        a(
+                          href="javascript:;"
+                          button-api
+                          data-method="PATCH"
+                          data-api=`/${pathAdmin}/role/undo/${item.id}`
+                        )
+                          i.las.la-undo-alt.text-success.fs-18.ms-1
+                        a(
+                          href="javascript:;"
+                          button-api
+                          data-method="DELETE"
+                          data-api=`/${pathAdmin}/role/destroy/${item.id}`
+                        )
+                          i.las.la-trash-alt.text-danger.fs-18.ms-1
+      // end col
 
