--- a/views/admin/partials/startbar.pug
+++ b/views/admin/partials/startbar.pug
@@ -23,12 +23,13 @@
       .d-flex.align-items-start.flex-column.w-100
         // Navigation
         ul.navbar-nav.mb-auto.w-100
-          li.nav-item
-            a.nav-link(
-              href=`/${pathAdmin}/dashboard`
-              )
-              i.iconoir-home-simple.menu-icon
-              span Tổng quan
+          if (permissions.includes("dashboard"))
+            li.nav-item
+              a.nav-link(
+                href=`/${pathAdmin}/dashboard`
+                )
+                i.iconoir-home-simple.menu-icon
+                span Tổng quan
           // end nav-item
           li.nav-item
             a.nav-link(
@@ -42,14 +43,17 @@
               span Bài viết
             #sidebarArticle.collapse
               ul.nav.flex-column
-                li.nav-item
-                  a.nav-link(href=`/${pathAdmin}/article/create`) Tạo bài viết
+                if (permissions.includes("article-create"))
+                  li.nav-item
+                    a.nav-link(href=`/${pathAdmin}/article/create`) Tạo bài viết
                 // end nav-item
-                li.nav-item
-                  a.nav-link(href=`/${pathAdmin}/article/list`) Danh sách bài viết
+                if (permissions.includes("article-list"))
+                  li.nav-item
+                    a.nav-link(href=`/${pathAdmin}/article/list`) Danh sách bài viết
                 // end nav-item
-                li.nav-item
-                  a.nav-link(href=`/${pathAdmin}/article/category`) Danh mục bài viết
+                if (permissions.includes("article-category"))
+                  li.nav-item
+                    a.nav-link(href=`/${pathAdmin}/article/category`) Danh mục bài viết
                 // end nav-item
               // end nav
             // end startbarApplications
@@ -66,11 +70,13 @@
               span Nhóm quyền
             #sidebarRole.collapse
               ul.nav.flex-column
-                li.nav-item
-                  a.nav-link(href=`/${pathAdmin}/role/create`) Tạo nhóm quyền
+                if (permissions.includes("role-create"))
+                  li.nav-item
+                    a.nav-link(href=`/${pathAdmin}/role/create`) Tạo nhóm quyền
                 // end nav-item
-                li.nav-item
-                  a.nav-link(href=`/${pathAdmin}/role/list`) Danh sách nhóm quyền
+                if (permissions.includes("role-list"))
+                  li.nav-item
+                    a.nav-link(href=`/${pathAdmin}/role/list`) Danh sách nhóm quyền
                 // end nav-item
           li.nav-item
             a.nav-link(
@@ -84,18 +90,21 @@
               span Tài khoản quản trị
             #sidebarAccountAdmin.collapse
               ul.nav.flex-column
-                li.nav-item
-                  a.nav-link(href=`/${pathAdmin}/account-admin/create`) Tạo tài khoản
+                if (permissions.includes("account-admin-create"))
+                  li.nav-item
+                    a.nav-link(href=`/${pathAdmin}/account-admin/create`) Tạo tài khoản
                 // end nav-item
-                li.nav-item
-                  a.nav-link(href=`/${pathAdmin}/account-admin/list`) Danh sách tài khoản
+                if (permissions.includes("account-admin-list"))
+                  li.nav-item
+                    a.nav-link(href=`/${pathAdmin}/account-admin/list`) Danh sách tài khoản
                 // end nav-item
-          li.nav-item
-            a.nav-link(
-              href=`/${pathAdmin}/file-manager/iframe`
-              )
-              i.iconoir-folder-settings.menu-icon
-              span Quản lý file
+          if (permissions.includes("file-manager"))
+            li.nav-item
+              a.nav-link(
+                href=`/${pathAdmin}/file-manager/iframe`
+                )
+                i.iconoir-folder-settings.menu-icon
+                span Quản lý file
           // end nav-item
     // end startbar-collapse
   // end startbar-menu
