02. Ghi log hoạt động quản trị viên

--- a/views/admin/pages/article-trash-category.pug
+++ b/views/admin/pages/article-trash-category.pug
@@ -1,7 +1,7 @@
 extends ../layouts/default.pug
 
 block main
-  if (permissions.includes("article-trash-category"))
+  if (permissions.includes("article-category-trash"))
     .row
       .col-12
         .card
