01. Chỉ quản trị viên được phép upload file lên file-manager - EC

--- a/views/admin/pages/admin-log-trash.pug
+++ b/views/admin/pages/admin-log-trash.pug
@@ -36,10 +36,17 @@ block main
                     td #{item.createdAtFormat}
                     td.text-end
                       a(
+                          href="javascript:;"
+                          button-api
+                          data-method="PATCH"
+                          data-api=`/${pathAdmin}/admin-log/undo/${item.id}`
+                        )
+                          i.las.la-undo-alt.text-success.fs-18.ms-1
+                      a(
                         href="javascript:;"
                         button-api
                         data-method="DELETE"
                         data-api=`/${pathAdmin}/admin-log/destroy/${item.id}`
                       )
-                        i.las.la-trash-alt.text-secondary.fs-18.ms-1
+                        i.las.la-trash-alt.text-danger.fs-18.ms-1
     // end col
